primitives/npos-elections/solution-type/tests/ui/fail/missing_target.stderr
error: Expected binding: `TargetIndex = ...`
 --> $DIR/missing_target.rs:5:2
  |
5 |     u8,
  |     ^^
